<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bottom_view_menu"
        android:icon="@drawable/ic_baseline_restaurant_menu_24"
        android:title="@string/menu"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_bottom_profile"
        android:icon="@drawable/ic_baseline_how_to_reg_24"
        app:showAsAction="always"
        android:title="@string/profile" />

    <item
        android:id="@+id/contacts"
        android:icon="@drawable/ic_baseline_contacts_24"
        app:showAsAction="always"
        android:title="@string/contacts" />

    <item
        android:id="@+id/basket"
        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:title="@string/basket"
        app:showAsAction="always" />
</menu>