<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <HorizontalScrollView
                android:id="@+id/pizzas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/recycler">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/stock"
                        android:layout_width="@dimen/width_horizontal_scroll_pizza"
                        android:layout_height="@dimen/width_horizontal_scroll_pizza"
                        android:src="@drawable/pizza1" />

                    <ImageView
                        android:layout_width="@dimen/width_horizontal_scroll_pizza"
                        android:layout_height="@dimen/width_horizontal_scroll_pizza"
                        android:src="@drawable/pizza2" />

                    <ImageView
                        android:layout_width="@dimen/width_horizontal_scroll_pizza"
                        android:layout_height="@dimen/width_horizontal_scroll_pizza"
                        android:src="@drawable/pizza3" />

                    <ImageView
                        android:layout_width="@dimen/width_horizontal_scroll_pizza"
                        android:layout_height="@dimen/width_horizontal_scroll_pizza"
                        android:src="@drawable/pizza4" />

                    <ImageView
                        android:layout_width="@dimen/width_horizontal_scroll_pizza"
                        android:layout_height="@dimen/width_horizontal_scroll_pizza"
                        android:src="@drawable/pizza5" />

                </LinearLayout>
            </HorizontalScrollView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <HorizontalScrollView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pizza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pizza" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/combo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/combo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/snacks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/snacks" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/desserts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/desserts" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/beverages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beverages" />
            </LinearLayout>
        </HorizontalScrollView>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>